Documentation of the api and last fixes
